- Don't send email notificatin to users which are not in the 'Login user' list
- Replace 'Email message body' by 'Email format'
- Send attachments as email attachments
- Don't display more than 10 email recipients
- Made default for "Filteres browsing" zero
- Added "Format <attribute> = width, size, flags, css1, css2"
- Display error if email notification fails

Version 2.3.8, released June 4th, 2003
======================================

- remove message lock on "back" button
- On config user page, don't go back to logbook page after changing a user as admin
- Check for .gif & co files in resource directory, then in themes directory
- for printable search result output, display all pages
- Added "Guest selection page" option
- Added possibility to reference attachment with elog:<id>/<n> with <n> the attachment
  number starting with 1
- elog utility can now read text from stdin (or piped in via "|")

Version 2.3.7, released May 15th, 2003
======================================

- Fixed bug in password recovery with logbooks containing blanks
- Fixed bug with logbooks containing blanks in registration notification
- Added icon for protected logbooks
- Increased number of attachments to 50
- Implemented 3D cell frames
- Added anchor for attachments
- Replace CRLF.CRLF by CRLF..CRLF in email notifications
- Option 'selection page' can now contain absolute URL
- Removed "mailto:" in email notifications
- Sort correctly upper and lower case
- Added warning if message is being edited
- Get remote host from X-Forwarded-For: in case of proxy

Version 2.3.6, released April 23rd, 2003
========================================

- Eliminated WEB_BUFFER_SIZE, made memory allocation dynamically
- Fixed bug that attachments were deleted on reply
- Added flag "Hidden = 0|1"
- Added warning if maximum number of attachments reached
- Fixed bug: Upon login on a logbook with guest access, one got
  back to the "not logged in" page if username or password was wrong
